# Systeme_de_recommandations_pour_agriculture

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/: main.py  requirements.txt
api/tests/: test_api.py
github/Nouveau dossier/: ci-cd.yml
github/workflows/: ci-cd.yml
model/: model_rf_tt.pkl
notebook/: Sauvegarde_1.ipynb  Untitled-1.ipynb  mlflow.db  model.ipynb  notebook.ipynb
notebook/mlruns/1/208e490691004089891df9759e290269/artifacts/: estimator.html  metric_info.json
notebook/mlruns/1/76af23703f90496d8e601205590dcf2b/artifacts/: estimator.html
notebook/mlruns/1/985383b4e08944e19e9c0a84b5c32695/artifacts/: estimator.html
notebook/mlruns/1/models/m-12d19d5e018748ab9f7a7ad22478a756/artifacts/: MLmodel
notebook/mlruns/1/models/m-4ae237ac2e994d748bf428a8a70bde7c/artifacts/: MLmodel  conda.yaml  requirements.txt
notebook/mlruns/1/models/m-860994635c0d415486cd49599f66f8d4/artifacts/: MLmodel  conda.yaml
notebook/mlruns/1/models/m-886b5fe0e68743cd935c6ccb7efbb7f6/artifacts/: MLmodel
notebook/mlruns/1/models/m-ca27693cb01643e39186446e4cb328ca/artifacts/: MLmodel
notebook/mlruns/1/models/m-ce84ed12287a4af1b4194f5d6d5ee4b7/artifacts/: MLmodel
notebook/mlruns/1/models/m-d5395c1dff0f4c86abd2beaaa2896eab/artifacts/: MLmodel
notebook/mlruns/1/models/m-dadb61af55f14a1690d0b9a2b0cee7df/artifacts/: MLmodel
notebook/sauvegarde 1/: Sauvegarde_1.ipynb  Sauvegarde_2.ipynb
streamlit_app/: app.py  tester_app.txt
(+4 files in other folders)
